@@ -3,12 +3,15 @@ package de.rainbowdev.backend.service;
 import de.rainbowdev.backend.model.Post;
 import de.rainbowdev.backend.repository.PostRepository;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 class PostServiceTest {
 
@@ -16,20 +19,30 @@ class PostServiceTest {
     PostService postService = new PostService(postRepository);
 
     @Test
-    void getAllPosts() {
+    void getAllPostsReturnEmptyList() {
         //GIVE
-        Post post1 = new Post();
-         List<Post> posts = List.of(post1);
-
-        when(postRepository.findAll()).thenReturn(posts);
+        List<Post> expected = Collections.emptyList();
+        when(postRepository.findAll()).thenReturn(Collections.emptyList());
 
         //WHEN
         List<Post> actual = postService.getAllPosts();
 
         //THEN
-        List<Post> expected =List.of(new Post());
+        verify(postRepository).findAll();
         assertEquals(expected, actual);
-
     }
 
+    @Test
+    void addPost() {
+        //GIVEN
+        Post post = new Post(null, "Spcae Disco", "A12345", "Kinda Beat", " ", true);
+        when(postRepository.save(post)).thenReturn(post);
+
+        //WHEN
+        Post actual = postService.addPost(post);
+
+        //THEN
+        verify(postRepository).save(post);
+        assertEquals(post, actual);
+    }
 }
